<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/container"
    tools:context=".activity.AddGoodsActivity">


    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar" />

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/toolbar">



        <LinearLayout android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:focusable="true"
            android:focusableInTouchMode="true">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="120dp">

                <ImageView
                    android:layout_weight="1"
                    android:id="@+id/imgAdd"
                    android:layout_width="100dp"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/app_name"
                    android:src="@mipmap/add_photos" />

                <LinearLayout
                    android:id="@+id/llRview"
                    android:layout_weight="2"
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                   <!-- <GridView
                        android:visibility="gone"
                        android:id="@+id/gridGallery"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:stretchMode="columnWidth"
                        android:layout_gravity="top"
                        android:scrollbarAlwaysDrawHorizontalTrack="true"
                        android:scrollbars="horizontal"
                        android:horizontalSpacing="-15dp"
                        android:numColumns="4"
                        android:columnWidth="150dp"
                        android:padding="1dp"
                        android:verticalSpacing="-15dp"
                        tools:listitem="@layout/photos_add_item">
                    </GridView> -->

                    <android.support.v7.widget.RecyclerView
                        android:id="@+id/addGoodsPhotosRv"
                        android:layout_width="wrap_content"
                        android:layout_height="120dp"
                        android:scrollbars="horizontal" />

                </LinearLayout>

            </LinearLayout>
            <!-- </ViewSwitcher> -->

            <android.support.design.widget.TextInputLayout
                android:id="@+id/goods_name_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginLeft="8dp">
                <EditText
                    android:id="@+id/goods_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textNoSuggestions"
                    android:hint="@string/goods_add_name" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginLeft="8dp">
                <EditText
                    android:id="@+id/goods_price"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:hint="@string/goods_add_price" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/goods_description_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginLeft="8dp">
                <EditText
                    android:id="@+id/goods_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textMultiLine"
                    android:hint="@string/goods_add_description" />
            </android.support.design.widget.TextInputLayout>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/goods_save"
                android:id="@+id/btnAddGoods"
                android:layout_below="@+id/selectCategoryName"
                android:layout_gravity="bottom"
                android:background="@color/colorPrimary"
                android:textColor="@color/white"
                android:layout_marginTop="15dp" />

        </LinearLayout>
    </ScrollView>

</LinearLayout>